10.12.1 (May XXX, 2020)
 - Updated streaming url.

10.12.0 (April 30, 2020)
 - Added support for the new Split streaming architecture. When enabled, the SDK will not poll for updates but instead receive notifications every time there's a change in your environments,
  allowing to process those much quicker. If disabled (default) or in the event of an issue, the SDK will fallback to the known polling mechanism to provide a seamless experience.

10.11.1 (Mar 19, 2020)
 - Updated @babel/runtime-corejs3, @types/node and several dev dependencies.
 - Updated the name of the "events" config of GOOGLE_ANALYTICS_TO_SPLIT integration to "hits".

10.11.0 (Mar 13, 2020)
 - Added integrations property to configuration which could receive a list of valid integrations.
 - Added support of inbound and outbound SDK to SDK integrations for Google Analytics. Read more in our documentation's integrations section.
 - Updated logging logic to avoid calling console.error in the client side.
 - Updated logging error messages priority to significantly reduce the amount of error level logs that can't be silenced.
 - Updated axios to 0.19.2 and few other minor updates on dev dependencies.
 - Updated default metricsRefreshRate from 60s to 120s and reduced the log level from ERROR to INFO for telemetry post failures.
 - Bugfixing - Emit SDK_UPDATE in localhost only when mock was actually updated.

10.10.0 (Jan 10, 2020)
 - Added SDK_READY_FROM_CACHE event, which will be emitted in LocalStorage mode when the SDK finds split cache in the storage of the browser.
 - Updated a dependency to fix a vulnerability (serialize-javascript).
 - Updated multiple dependencies and dev dependencies (@types/node, axios, core-js, events, sinon, tape and the babel cli, core, preset-env, register and plugin-transform-runtime)

10.9.2 (Nov 20, 2019)
 - Bugfixing - When using Redis, return expire result to avoid race condition with redis disconnection due to a client destroy.