@@ -1,5 +1,6 @@
 10.12.1 (May XXX, 2020)
  - Updated streaming url.
+ - Updated logging messages for streaming notifications to DEBUG log level.
 
 10.12.0 (April 30, 2020)
  - Added support for the new Split streaming architecture. When enabled, the SDK will not poll for updates but instead receive notifications every time there's a change in your environments,
